fixed the gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,12 @@ body{
   width: 100%;
   height: 100vh;
   padding: 0;
+
+}
+
+section.jumbotron {
+    padding: 2rem 1rem;
+    margin-bottom: 0;
 }
 
 
@@ -32,7 +38,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  margin:0;
+  margin: 0;
   padding-top: 15%;
 }
 
